# dataset-collector

./: .gitignore  README.md  babel.config.js  compiler.py  crawler.py  main.py  package-lock.json  package.json  pyproject.toml
colab/: bert.ipynb
create_dataset/: Dockerfile  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
create_dataset/src/: compiler.py  embed_code.py  scraper.py  sourse_code_parser.py
sample/py/Listing1/: sample100.py  sample11.py  sample11.py.pyc.txt  sample12.py  sample13.py  sample15.py  sample15.py.pyc.txt  sample18.py  sample2.py  sample2.py.pyc.txt  sample20.py  sample22.py  sample22.py.pyc.txt  sample23.py.pyc.txt  sample24.py.pyc.txt  sample25.py  sample25.py.pyc.txt  sample27.py  sample28.py.pyc.txt  sample30.py.pyc.txt  sample31.py  sample33.py.pyc.txt  sample34.py.pyc.txt  sample36.py  sample36.py.pyc.txt  sample37.py  sample37.py.pyc.txt  sample38.py.pyc.txt  sample4.py.pyc.txt  sample40.py  sample40.py.pyc.txt  sample42.py  sample43.py  sample43.py.pyc.txt  sample45.py  sample45.py.pyc.txt  sample46.py.pyc.txt  sample47.py  sample47.py.pyc.txt  sample48.py  (+60 more)
sample/py/Listing2/: sample10.py  sample103.py  sample104.py  sample105.py  sample106.py  sample110.py  sample13.py  sample14.py  sample16.py  sample17.py  sample18.py  sample21.py  sample26.py  sample28.py  sample29.py  sample3.py  sample30.py  sample31.py  sample32.py  sample33.py  sample36.py  sample37.py  (+36 more)
src/: bytecode_normalizer.py  compiler.py  crawler.py  fetch_repo.py  normalizer.py  scraper.py  string_normalizer.py  utils.py  write_csv.py
(+1650 files in other folders)
